--- a/Registration.css
+++ b/Registration.css
@@ -82,7 +82,10 @@ body {
   color: #fff;
   padding: 10px;
 }
-
+.menu > li a {
+  text-decoration: none;
+  color: #fff; 
+}
 .logo {
   text-align: start;
   width: 200px;
@@ -169,8 +172,8 @@ body {
   color: #ff0000;
 }
 .description {
-  font-size: 10px;
-  font-weight:bolder;
+  font-size: 24px;
+  font-family: 'Piazzolla', serif;
   color: #ffffff;
   margin: 10px 0;
   text-align: start;
@@ -184,11 +187,6 @@ body {
   cursor: pointer;
   margin-left: 50%;
   transform: translateX(-50%);
-   
-  }
-  .btn{
-     background-color: white;
-     color: #000000;
   }
   .ContactUs {
     background-color: transparent;
@@ -285,13 +283,11 @@ body {
     margin: 0;
     padding: 0;
     border: 0;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
   #menu-toggle:checked ~ .menu li {
     border: 1px solid #333;
     height: 2.5em;
     padding: 0.5em;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
   .menu > li {
     display: flex;
@@ -302,12 +298,14 @@ body {
     color: white;
     background-color: #222;
   }
-  .menu > li:not(:last-child) {
-    border-bottom: 1px solid #444;
+
+  .description{
+    font-size: 18px
   }
 }
 @media (min-width: 768px) {
   .pricing-plans {
       justify-content: space-between; /* Increase space between plans on wider screens */
   }
+
 }
