--- a/courses.css
+++ b/courses.css
@@ -96,21 +96,13 @@ body {
   cursor: pointer;
 }
 
-.navbar ul {
-  list-style: none;
-  display: grid;
-  grid-template-rows: 100px, 1fr;
-  grid-gap: 10px;
-  padding: 0;
-}
-
 .navbar li {
   margin: 0 10px;
 
 }
 .menu > li a {
-  text-decoration: none; /* Remove underlines from links */
-  color: #fff; /* Set the text color to white */
+  text-decoration: none;
+  color: #fff; 
 }
 
 .Courses{
@@ -123,8 +115,9 @@ body {
     display: flex;
     flex-direction: row;
     text-align: center;
+    justify-content: center;
     width: 90%;
-    margin: 0 auto; /* Add this to center the container within its parent */
+    margin: 0 auto; 
 
 }
 .centered-h1 {
@@ -161,6 +154,10 @@ body {
     padding: 5px 10px;
     margin-top: 10px;
     cursor: pointer;
+}
+.read-more:hover{
+  color: #000000;
+  background-color: #fff;
 }
 footer {
     text-align: center;
@@ -214,13 +211,11 @@ footer {
       margin: 0;
       padding: 0;
       border: 0;
-      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
     #menu-toggle:checked ~ .menu li {
       border: 1px solid #333;
       height: 2.5em;
       padding: 0.5em;
-      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
     .menu > li {
       display: flex;
