--- a/index.css
+++ b/index.css
@@ -97,13 +97,6 @@
   cursor: pointer;
 }
 
-.navbar ul {
-  list-style: none;
-  display: grid;
-  grid-template-rows: 100px, 1fr;
-  grid-gap: 10px;
-  padding: 0;
-}
 
 
 
@@ -151,13 +144,14 @@
  }
 .FAQ {
   background: url(img/img/IMG.jpg); 
-  height: 120vh;
+  height: 130vh;
+  display: flex;
+  justify-content: center;
 }
 .FAQ h1{
   color: white;
   display: flex;
-  justify-content: center;
-}
+  justify-content: center;}
 
 .Q div {
   margin-bottom: 10px;
@@ -166,16 +160,55 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   cursor: pointer;
-  width: 25%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 100px;
   
 }
 .faq .answer {
   display: none;
+  height: fit-content;
+  width: 160px;
+  text-align: ;
 }
 
 .faq.active .answer {
   display: block;
 }
+footer {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #A80000;
+  height: 300px; 
+
+
+}
+footer div img{
+  width: 150px;
+}
+.socialIcons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.socialIcons img {
+  width: 36px; 
+  height: 36px; 
+  margin: 0 10px; 
+}
+.socialIcons img:hover{
+  transform: scale(1.1);
+}
+
+.copyright {
+  font-size: 16px;
+}
+
 @media (max-width: 700px) {
     .menu-button-container {
       display: flex;
@@ -194,13 +227,11 @@
       margin: 0;
       padding: 0;
       border: 0;
-      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
     #menu-toggle:checked ~ .menu li {
       border: 1px solid #333;
       height: 2.5em;
       padding: 0.5em;
-      transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
     }
     .menu > li {
       display: flex;
